# WolfEdit

./: .gitignore  CMakeLists.txt  LICENSE  Notes.md  README.md  WolfEdit.desktop  WolfEdit.pro  install.sh  main.cpp  wolfedit.py
DEBIAN/: control
scripts/: build.sh  build_with_qmake.sh  fakevim_build.sh  format.sh  install.sh  package_deb.sh  tidy.sh
src/: WolfEdit.h  editor.cpp  editor.h  main.cpp  vim.cpp
